tests/e2e/semantics/continue_outside.error
Error: syntax error in story at line 3, column 5

3|        continue
          ^^^^^^^^

E0133: `continue` is allowed only inside loops
