tests/e2e/semantics/continue_outside.story
a = 1
try
    continue
catch
    a = 2
